--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,20 @@ li {
   fill: #FFE7B7;
 }
 
+.mostpop {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 10px;
+  background: #ffffff;
+  text-align: center;
+  border-radius: 5px;
+  color: #292929;
+  font-size: 20px;
+  font-weight: 900;
+}
+
 .intro {
   position: relative;
   background-color: #204D48;
@@ -342,6 +356,7 @@ li {
   flex-direction: column;
 }
 .package__item--header {
+  position: relative;
   font-family: "ProximaNova";
   padding: 45px 10px 50px 85px;
   border-bottom: 1px solid #FFE7B7;
@@ -1415,6 +1430,11 @@ li {
     font-size: 18px;
     padding: 12px 0;
   }
+
+  .mostpop {
+    color: #292929;
+    font-size: 18px;
+  }
 }
 @media (max-width: 375px) {
   .intro-timer__title--mobile {
@@ -1490,6 +1510,12 @@ li {
 
   .modal__inf {
     padding: 30px 10px 40px 10px;
+  }
+
+  .mostpop {
+    top: 5px;
+    right: 5px;
+    font-size: 16px;
   }
 }
 @media (max-width: 320px) {
