--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,22 @@ li {
   -ms-flex-align: center;
   align-items: center;
 }
-.header__logo {
+.header__logo--desktop {
   display: block;
   width: 165px;
   height: 34px;
 }
-.header__logo img {
+.header__logo--desktop img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.header__logo--mobile {
+  display: none;
+  width: 165px;
+  height: 34px;
+}
+.header__logo--mobile img {
   display: block;
   width: 100%;
   height: 100%;
@@ -1051,6 +1061,19 @@ li {
 
   .header__logo {
     margin-left: 20px;
+  }
+  .header__logo--desktop {
+    display: none;
+  }
+  .header__logo--mobile {
+    display: block;
+    width: 132px;
+    height: auto;
+  }
+  .header__logo--mobile img {
+    display: block;
+    width: 100%;
+    height: 100%;
   }
 
   .intro {
