--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,14 +52,26 @@ li {
         align-items: center;
     }
     &__logo {
-        display: block;
-        width: 165px;
-        height: 34px;
-        img {
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
+        &--desktop{
+			display: block;
+			width: 165px;
+			height: 34px;
+            img {
+				display: block;
+				width: 100%;
+				height: 100%;
+			}
+		}
+		&--mobile {
+			display: none;
+			width: 165px;
+			height: 34px;
+			img {
+				display: block;
+				width: 100%;
+				height: 100%;
+			}
+		}
     }
     &__call {
         display: -webkit-box;
@@ -1050,8 +1062,23 @@ li {
 	.header__call {
 		display: none;
 	}
-	.header__logo {
-		margin-left: 20px;
+	.header {
+		&__logo {
+			margin-left: 20px;
+			&--desktop {
+				display: none;
+			}
+			&--mobile {
+				display: block;
+				width: 132px;
+				height: auto;
+				img {
+					display: block;
+					width: 100%;
+					height: 100%;
+				}
+			}
+		}
 	}
 	.intro {
 		background-size: 94%;
