--- a/scss/style.scss
+++ b/scss/style.scss
@@ -188,6 +188,10 @@ li {
 			background-color: #204D48;
 			color: #FFE7B7;
 		}
+		&__red {
+			background-color: #FF6464;
+			color: #ffffff;
+		}
     }
 }
 .arrow {
@@ -887,6 +891,7 @@ li {
 	.package {
 		&__item {
 			&--body {
+				padding: 30px 40px 30px 25px;
 				&__link {
 					font-size: 18px;
 				}
@@ -1389,6 +1394,11 @@ li {
 				top: -140px;
 			}
 		}
+		&__item {
+			&--body {
+				padding: 30px 120px 30px 25px;
+			}
+		}
 	}
 	.autor__inner--item {
 		width: 93%;
@@ -1545,6 +1555,13 @@ li {
 @media (max-width: 320px) {
 	.intro {
 		overflow: hidden;
+	}
+	.package {
+		&__item {
+			&--body {
+				padding: 10px 50px 10px 25px;
+			}
+		}
 	}
 }
 /*FONTS*/
