--- a/scss/style.scss
+++ b/scss/style.scss
@@ -775,6 +775,10 @@ li {
 	line-height: 24px;
 	color: #292727;
 }
+.modal__inf--text__italic {
+	font-weight: bold;
+	font-style: italic;
+}
 .modal__inf--text__bold {
 	font-weight: bold;
 }
